--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: beige;
+  background-color: red;
   font-family: 'Courier New', Courier, monospace;
   color: green;
   line-height: normal;
